# Estimating-3D-Motion-Forces

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  environment.yml  estimate.py  optimizer.py  requirements.txt
data/Parkour-dataset/HMR/: HMR-demo.pkl
data/Parkour-dataset/Openpose-video/: Openpose-video-demo.pkl
data/Parkour-dataset/contact-recognizer/: contact-recognizer-demo.pkl
data/Parkour-dataset/gt_motion_forces/: contact_forces.pkl  contact_forces_local.pkl  joint_3d_positions.pkl
data/Parkour-dataset/gt_motion_forces/forceplate_corners/: kv01_PKFC.mat
data/Parkour-dataset/lib/: parkour_evaluator.py
data/Parkour-dataset/lib/helpers/: maths.py  split_string.sh
lib/: contact_states.py  display.py  evaluate.py  human_pose.py  object_pose.py  utils.py  video_recorder.py
object_models/: barbell.py  ground_plane.py  object_base.py  sledgehammer.py  sticklike_objects.py
object_models/parameters/: barbell.txt  hammer.txt  scythe.txt  spade.txt  virtual_object.txt
person_models/: full_body_inertia.pkl  gmm_pose_prior.pkl  limb.py  person.py
person_models/smpl/smpl_webuser/: .npz  __init__.py  j3d_positions.npz  outputj3dpos.py  serialization.py  temp.npz
person_models/smpl/smpl_webuser/hello_world/: render_smpl.py  show_series.py
scripts/: demo.sh
scripts/utils/: split_string.sh
solver/: CMakeLists.txt  build_loss_function.cc  camera.cc  camera.h  pose_prior_gmm.cc  pose_prior_gmm.h  set_options.cc  solver.cc  solver.h
solver/bindings/: bindings.cc  bindings.h  expose_camera.cc  expose_dataloader.cc  expose_dataloader_object.cc  expose_dataloader_person.cc  expose_pose_prior_gmm.cc  expose_solver.cc
solver/cost_functors/: contact_ground_spatial.cc  contact_ground_spatial.h  contact_ground_temporal.h  contact_object_spatial.h  contact_object_temporal.h  contact_symmetric.h  contact_temporal.cc  contact_temporal.h  horizontal_object.h  limit_ground_force.cc  limit_ground_force.h  limit_object_force.cc  limit_object_force.h  object_3d_errors.cc  object_3d_errors.h  object_acceleration.h  object_data.h  object_torque.cc  object_torque.h  object_velocity.h  person_3d_errors.cc  person_3d_errors.h  person_acceleration.h  person_center_of_mass.h  person_data.cc  person_data.h  person_depth.h  person_pose.h  person_spatial_acceleration.h  person_torque.cc  person_torque.h  person_velocity.h  smoothing_cartesian_acceleration.h  smoothing_ground_force.h  smoothing_object_force.h
solver/dataloader/: dataloader.cc  dataloader.h  dataloader_object.cc  dataloader_object.h  dataloader_person.cc  dataloader_person.h
validation/parameters/: params_init.txt
